# files-deduplicator

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json.template  LICENSE.md  README.md
src/: CMakeLists.txt  PurgeDuplicates.cpp  PurgeDuplicates.hpp  main.cpp  version.hpp.in
tests/: CMakeLists.txt  tests_integration.cpp  tests_unit.cpp
